--- a/style.css
+++ b/style.css
@@ -10,10 +10,31 @@ html {
   font-size: 62.5%;
 }
 
+body {
+  background: #ccc;
+}
+
 button {
   border: 1px solid #ccc;
-  background: #eee;
+  background: #ececec;
+  border-radius: 50%;
   cursor: pointer;
+
+  width: 4em;
+  height: 4em;
+}
+
+.grid-picker button,
+.color-picker .add-color {
+  border-radius: 8px;
+  font-weight: 700;
+  letter-spacing: 0.1rem;
+  color: #333;
+}
+
+.color-picker .add-color {
+  width: 100%;
+  height: 2em;
 }
 
 .wrapper {
@@ -29,7 +50,7 @@ button {
   height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  padding-top: 8em;
   gap: 2em;
 }
 
@@ -46,15 +67,14 @@ button {
   gap: 1em;
 }
 
-.grid-picker button,
-.color-picker button {
-  width: 4em;
-  height: 4em;
-}
-
 .color-picker .wheel .color {
   width: 4em;
   height: 2em;
+}
+
+.color-picker .static {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
 }
 
 /* BOARD */
@@ -66,6 +86,7 @@ button {
 
 .drawing-board {
   display: grid;
+  background: white;
 }
 
 /*utils */
